# qc_desktop

./: .cursorrules  .gitattributes  .gitignore  .prettierrc.cjs  AGENTS.md  BRANDING.md  CLAUDE.md  DESIGN_SYSTEM.md  LICENSE  README.md  UIUX_STANDARDS.md  electron-builder.json  global.d.ts  package-lock.json  package.json  pnpm-lock.yaml  数据库需求与设计文档.md
python/: README.md  pyproject.toml  reddyproc_partitioning.py  reddyproc_r_bridge.py  requirements.txt  timemixerpp.py  timemixerpp_co2_flux.pypots  timermixerpp_pm2_5.pypots  timeseries_imputation.py
python/methods/: beon_nonflux_pipeline.py  beon_reddyproc_pipeline.py  itransformer_impute.py  knn_impute.py  reddyproc_flux_pipeline.py  rf_impute.py  saits_impute.py  timemixer_impute.py  xgb_impute.py
python/models/ITRANSFORMER/FCH4/: itransformer_cv_masks15_mask5_20260330_174748.pypots  itransformer_cv_masks15_mask5_20260330_174748_metadata.joblib  itransformer_cv_masks1_mask10_20260330_163507.pypots  itransformer_cv_masks1_mask10_20260330_163507_metadata.joblib  itransformer_cv_masks30_mask4_20260330_193825_metadata.joblib  itransformer_cv_masks7_mask4_20260330_171146.pypots  itransformer_cv_masks7_mask4_20260330_171146_metadata.joblib
python/models/ITRANSFORMER/NAI/: itransformer_cv_masks15_mask3_20260330_212902.pypots  itransformer_cv_masks15_mask3_20260330_212902_metadata.joblib  itransformer_cv_masks1_mask10_20260330_201417.pypots  itransformer_cv_masks1_mask10_20260330_201417_metadata.joblib  (+3 more)
python/models/NEE/: RF_model_masks30_mask6_20260331_195151.pkl
python/tests/: test_core_functions.py
(+275 files in other folders)
