[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pypots>=1.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
]
